--- a/css/old-style.css
+++ b/css/old-style.css
@@ -130,12 +130,12 @@ video {
   transition: transform 0.6s ease;
 }
 
-/* #test {
+ #test {
   -webkit-animation: fadein 2s;
-  /* -moz-animation: fadein 2s; */
-  /* -o-animation: fadein 2s; */
-  /* animation: fadein 2s; */
-/* } */
+   -moz-animation: fadein 2s; 
+   -o-animation: fadein 2s; 
+   animation: fadein 2s; 
+ } 
 
 @keyframes fadein {
   from {
@@ -249,5 +249,11 @@ video {
 
   #baci {
     margin-top: 10%;
+  }
+}
+
+@media only screen and (min-width: 769px) {
+  #descriptions-1, #descriptions-2 {
+    width: 60%;
   }
 }
